# Sample-Apps-Public

./: .gitignore  README.md  pyproject.toml
account-review/: README.md  application.py  config.py  database.db  run.py
account-review/api/: create_consumer.py  get_order.py  order.py  run_requests.py
account-review/db/: db_utils.py  init_db.py  schema.sql
account-review/models/: request.py  response.py
account-review/static/css/: initial.css  register.css
account-review/static/script/: back.js  register.js
account-review/templates/: consumer_created.html  error.html  initial.html  register.html  report_init.html  summary.html
manual-report-viewer/: README.md  application.py  config.py  run.py
manual-report-viewer/api/: auth.py  consumer.py  get_order.py  run_requests.py
manual-report-viewer/models/: request.py  response.py
manual-report-viewer/static/css/: consumer_created.css  error.css
manual-report-viewer/static/script/: showLoading.js
manual-report-viewer/templates/: error.html  register.html  success.html
